--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container-fluid">
       <a
-        href="https://github.com/Anonymity94/spl2sql"
+        href="https://github.com/Anonymity94/spl2dsl"
         class="github-corner"
         aria-label="View source on GitHub"
         ><svg
