--- a/examples/index.html
+++ b/examples/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Convert Splunk SPL to Elasticsearch DSL</title>
     <link
-      href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
+      href="https://lib.baomitu.com/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://cdn.bootcdn.net/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css"
+      href="https://lib.baomitu.com/github-markdown-css/4.0.0/github-markdown.min.css"
       rel="stylesheet"
     />
-    <script src="https://cdn.bootcdn.net/ajax/libs/markdown-it/12.0.3/markdown-it.min.js"></script>
+    <script src="https://lib.baomitu.com/markdown-it/12.1.0/markdown-it.min.js"></script>
     <script src="../lib/converter.min.js"></script>
   </head>
 
